fixed cta mobile dark mode text

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4240,7 +4240,15 @@
     border-radius: var(--cardRounded);
   }
 }
-
+@media only screen and (min-width: 0rem){
+  body.dark-mode #cta-403{
+    .cs-button-solid,
+    .cs-title,
+    .cs-text{
+      color: #fff;
+    }
+  }
+}
 /*Custom Styles*/
 @media only screen and (min-width: 0rem) {
   #blog-1289.below-article {
